@@ -1,54 +1,71 @@
 package q3;
 
+// From a list of employees with name, department, salary, and years of experience,
+// find departments where the average experience is above 5 years
+// AND the average salary is below the company-wide average salary.
+
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.stream.Collectors;
 
-// Given a list of product orders with customer ID, product name, quantity, and price,
-// find customers who have bought all products at least once (complete product coverage).
-// Return their customer IDs.
+enum Department {
+    SALES,
+    MARKETING,
+    TECH
+}
 
-class Order {
-    private String custId;
-    private String productName;
-    private int quantity;
-    private double price;
+class Employee {
+    private String name;
+    private Department department;
+    private double salary;
+    private float experience;
 
-    public Order(String custId, String productName, int quantity, double price) {
-        this.custId = custId;
-        this.productName = productName;
-        this.quantity = quantity;
-        this.price = price;
+    Employee(String name, Department department, double salary, float experience) {
+        this.name = name;
+        this.department = department;
+        this.salary = salary;
+        this.experience = experience;
     }
-    public String getCustId(){
-        return custId;
+    public Department getDepartment(){
+        return department;
     }
-    public String getProductName(){
-        return productName;
+    public float getExperience() {
+        return experience;
     }
-
+    public double getSalary() {
+        return salary;
+    }
 }
 
 public class Main {
-
     public static void main(String[] args) {
-        List<Order> orders = List.of(
-                new Order("C1", "Hoka Swift", 1, 2200.0),
-                new Order("C1", "Kreo Webcam", 1, 3000),
-                new Order("C1", "Logitech Wireless Mouse", 1, 1200),
-                new Order("C2", "Logitech Wireless Mouse", 1, 1200)
+        List<Employee> employees = Arrays.asList(
+                new Employee("Mahtab", Department.TECH, 3000000.00d, 9.75f),
+                new Employee("Alex", Department.SALES, 2700000.00d, 10.50f),
+                new Employee("Nyugen", Department.MARKETING, 2800000.00d, 7.25f),
+                new Employee("Marc", Department.TECH, 2500000.00d, 6.00f),
+                new Employee("Svetlana", Department.MARKETING, 2800000.00d, 7.75f)
         );
 
-        Set<String> allProducts = orders.stream().map(Order::getProductName).collect(Collectors.toSet());
+        double companyWideAvgSalary = employees.stream().collect(Collectors.averagingDouble(Employee::getSalary));
+        System.out.println("Company Avg Salary:"+companyWideAvgSalary);
 
-        Map<String,Set<String>> purchases = orders.stream()
-                .collect(Collectors.groupingBy(Order::getCustId,
-                         Collectors.mapping(Order::getProductName, Collectors.toSet())));
+        Map<Department, Double> departmentAvgExperience = employees.stream()
+                .collect(Collectors.groupingBy(Employee::getDepartment,
+                            Collectors.averagingDouble(Employee::getExperience)
+                        ));
+        Map<Department, Double> departmentAvgSalary = employees.stream()
+                .collect(Collectors.groupingBy(Employee::getDepartment,
+                            Collectors.averagingDouble(Employee::getSalary)
+                        ));
+        List<Department> departments = employees.stream()
+                .map(Employee::getDepartment)
+                .distinct()
+                .filter(department -> departmentAvgExperience.get(department) > 5.0d &&
+                                                 departmentAvgSalary.get(department) < companyWideAvgSalary)
+                .collect(Collectors.toList());
 
-        purchases.entrySet().stream()
-                .filter(entry -> entry.getValue().size() == allProducts.size())
-                .map(Map.Entry::getKey)
-                .forEach(id -> System.out.println("Bought all products :"+id));
+        departments.forEach(System.out::println);
     }
 }
